tests/negative-fixtures/banned_float_confidence_types/src/lib.rs
pub fn raw_confidence() -> (f32, f64) {
    (0.5, 0.75)
}
